--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -1,16 +1,14 @@
 <ion-header *ngIf="modalPage">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal(false)"
-        ><ion-icon name="chevron-back-outline"></ion-icon
-      ></ion-button>
+      <ion-button (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-grid>
       <ion-row>
         <ion-col>
           <!--css is defined in editfeature.page.scss-->
           <div class="title" [ngClass]="{'ios': platform.is('ios')}">
-            {{moment.program}}
+            {{moment.matrix_string[0][0]}}
           </div>
         </ion-col>
       </ion-row>
@@ -19,12 +17,8 @@
 </ion-header>
 
 <ion-content
-  *ngIf="resource && resource._id && moment.resource && moment.resource.field"
->
-  <ion-grid
-    style="height: 100%; position: absolute;"
-    *ngIf="momentService.ionSpinner"
-  >
+  *ngIf="resource && resource._id && moment.resource && moment.resource.field">
+  <ion-grid style="height: 100%; position: absolute;" *ngIf="momentService.ionSpinner">
     <ion-row class="ion-align-items-center" style="height: 100%;">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
@@ -32,10 +26,14 @@
   <div>
     <ion-list>
       <ion-item>
-        <ion-label>
-          All Participants in {{moment.matrix_string[0]}}
-        </ion-label>
-        <ion-select slot="end" placeholder="Invite" interface="popover" [interfaceOptions]="{header: 'Invite'}" (ionChange)="openPopUpModalAddParticipants($event)">
+        <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="mergeParticipantsIntoUniqueParticipantList()" (ionCancel)="mergeParticipantsIntoUniqueParticipantList()" placeholder="Search"></ion-searchbar>
+        <ion-select [(ngModel)]="rolesFilter" #RolesSelect (ionChange)="mergeParticipantsIntoUniqueParticipantList()" placeholder="Role" interface="popover" [interfaceOptions]="{header: 'Role'}" [multiple]="true" style="width: 20%; min-width: 40px">
+          <ion-select-option [value]="{user_list: ['user_list_1'], label: this.participantLabel}">{{participantLabel}}</ion-select-option>
+          <ion-select-option [value]="{user_list: ['user_list_2'], label: this.organizerLabel}">{{organizerLabel}}</ion-select-option>
+          <ion-select-option [value]="{user_list: ['user_list_3'], label: this.leaderLabel}">{{leaderLabel}}</ion-select-option>
+        </ion-select>
+        <ion-button slot="end" (click)="inviteSelect.open($event)">Invite</ion-button>
+        <ion-select #InviteSelect placeholder="Invite" interface="popover" [interfaceOptions]="{header: 'Invite'}" (ionChange)="openPopUpModalAddParticipants($event)" hidden>
           <ion-select-option [value]="{user_list: ['user_list_1'], label: this.participantLabel}">{{participantLabel}}</ion-select-option>
           <ion-select-option [value]="{user_list: ['user_list_2'], label: this.organizerLabel}">{{organizerLabel}}</ion-select-option>
           <ion-select-option [value]="{user_list: ['user_list_3'], label: this.leaderLabel}">{{leaderLabel}}</ion-select-option>
@@ -46,102 +44,14 @@
         <ion-label (click)="sortDisplay('role')">Role<ion-icon [name]="roleAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></ion-label>
       </ion-item>
       <ion-item *ngFor="let user of uniqueParticipantList; index as j" lines="full">
-      <ion-avatar slot="start" (click)="seeUserInfo($event, user)">
-        <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-        <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-      </ion-avatar>
-      <ion-label (click)="seeUserInfo($event, user)">{{user.first_name}} {{user.last_name}}</ion-label>
-        <ion-label>{{user.role.join(" / ")}}</ion-label>
+        <ion-avatar slot="start" (click)="seeUserInfo($event, user)">
+          <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
+          <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+        </ion-avatar>
+        <ion-label (click)="seeUserInfo($event, user)">{{user.first_name}} {{user.last_name}}</ion-label>
+        <ion-label>{{user.roles.join(" / ")}}</ion-label>
         <ion-button (click)="pushToMessagePage($event, user)" [disabled]="userData.user._id === user._id">Chat</ion-button>
       </ion-item>
     </ion-list>
-
-    <!-- <ion-item lines="none">
-      <ion-label>{{participantsLabel}}</ion-label>
-    </ion-item>
-    <ion-grid *ngIf="moment._id" class="user-list-preview">
-      <ion-row class="participant-row">
-        <ion-col class="ion-align-self-center" size="auto">
-          <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_1'], participantsLabel)">
-            <div class="participant-centered">
-              <ion-avatar class="participant-avatar" slot="start">
-                <img src="assets/img/avatar-default.jpg"/>
-              </ion-avatar>
-              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{participantLabel}}</ion-label> Add Participant
-            </div>
-          </ion-item>
-        </ion-col>
-        <ion-col *ngFor="let user of moment.user_list_1; index as j" class="ion-align-self-center" size="auto">
-          <ion-item lines="none" (click)="seeUserInfo($event, user)">
-            <div class="participant-centered">
-              <ion-avatar class="participant-avatar" slot="start">
-                <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-                <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-              </ion-avatar>
-              <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'participant', j)"></ion-icon>
-              <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-            </div>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-item lines="none">
-      <ion-label>{{leadersLabel}}</ion-label>
-    </ion-item>
-    <ion-grid *ngIf="moment._id" class="user-list-preview">
-      <ion-row class="participant-row">
-        <ion-col class="ion-align-self-center" size="auto">
-          <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_3'], leadersLabel)">
-            <div class="participant-centered">
-              <ion-avatar class="participant-avatar" slot="start">
-                <img src="assets/img/avatar-default.jpg"/>
-              </ion-avatar>
-              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{leaderLabel}}</ion-label>
-            </div>
-          </ion-item>
-        </ion-col>
-        <ion-col *ngFor="let user of moment.user_list_3; index as j" class="ion-align-self-center" size="auto">
-          <ion-item lines="none" (click)="seeUserInfo($event, user)">
-            <div class="participant-centered">
-              <ion-avatar class="participant-avatar" slot="start">
-                <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-                <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-              </ion-avatar>
-              <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'leader', j)"></ion-icon>
-              <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-            </div>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-item lines="none">
-      <ion-label>{{organizersLabel}}</ion-label>
-    </ion-item>
-    <ion-grid class="user-list-preview" *ngIf="moment._id">
-      <ion-row class="participant-row">
-        <ion-col class="ion-align-self-center" size="auto">
-          <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_2'], organizersLabel)">
-            <div class="participant-centered">
-              <ion-avatar class="participant-avatar" slot="start">
-                <img src="assets/img/avatar-default.jpg"/>
-              </ion-avatar>
-              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{organizerLabel}}</ion-label>
-            </div>
-          </ion-item>
-        </ion-col>
-        <ion-col *ngFor="let user of moment.user_list_2; index as j" class="ion-align-self-center" size="auto">
-          <ion-item lines="none" (click)="seeUserInfo($event, user)">
-            <div class="participant-centered">
-              <ion-avatar class="participant-avatar" slot="start">
-                <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-                <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-              </ion-avatar>
-              <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'organizer', j)"></ion-icon>
-              <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-            </div>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid> -->
   </div>
 </ion-content>
