--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>{{recipient.first_name}} {{recipient.last_name}}</ion-title>
     <ion-buttons class="header-buttons" slot="end">
-      <ion-button (click)="router.navigate([{ outlets: { sub: null }}])" *ngIf="subPanel">
+      <ion-button (click)="router.navigate([{ outlets: { sub: null }}])" *ngIf="subpanel">
         <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
