--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -1,9 +1,9 @@
-<ion-header *ngIf="modalPage">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar *ngIf="modalPage">
     <ion-buttons slot="start">
       <ion-button (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>{{title}}</ion-title>
+    <ion-title *ngIf="title === 'People'">{{title}}</ion-title>
     <ion-grid *ngIf="title !== 'People'">
       <ion-row>
         <ion-col>
@@ -20,6 +20,33 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-list>
+      <ion-item lines="none">
+        <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="renderUniqueParticipantList()" (ionCancel)="renderUniqueParticipantList()" placeholder="Search"></ion-searchbar>
+        <ion-select [(ngModel)]="rolesFilter" #RolesSelect (ionChange)="renderUniqueParticipantList()" placeholder="Role" interface="popover" [interfaceOptions]="{header: 'Role'}" [multiple]="true" style="width: 20%; min-width: 40px" *ngIf="!modalPage">
+          <ion-select-option [value]="this.participantLabel">{{participantLabel}}</ion-select-option>
+          <ion-select-option [value]="this.organizerLabel">{{organizerLabel}}</ion-select-option>
+          <ion-select-option [value]="this.leaderLabel">{{leaderLabel}}</ion-select-option>
+        </ion-select>
+        <ion-button slot="end" (click)="inviteSelect.open($event)" *ngIf="!modalPage">Invite</ion-button>
+        <ion-select #InviteSelect placeholder="Invite" interface="popover" [interfaceOptions]="{header: 'Invite'}" (ionChange)="openPopUpModalAddParticipants($event)" hidden>
+          <ion-select-option [value]="{user_list: ['user_list_1'], label: this.participantLabel}">{{participantLabel}}</ion-select-option>
+          <ion-select-option [value]="{user_list: ['user_list_2'], label: this.organizerLabel}">{{organizerLabel}}</ion-select-option>
+          <ion-select-option [value]="{user_list: ['user_list_3'], label: this.leaderLabel}">{{leaderLabel}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="selectedParticipants.length" lines="none">
+        <ion-label>{{selectedParticipants.length}} Selected</ion-label>
+        <ion-button slot="end" (click)="removeSelect.open($event)" slot="end">Remove Role</ion-button>
+        <ion-select #RemoveSelect (ionChange)="multiSelectAction($event)" placeholder="Remove Role" interface="popover" [interfaceOptions]="{header: 'Remove Role'}" [multiple]="true" style="width: 20%; min-width: 40px" hidden>
+          <ion-select-option [value]="{user_list: 'user_list_1', singularLabel: this.participantLabel, pluralLabel: this.participantsLabel}">{{participantLabel}}</ion-select-option>
+          <ion-select-option [value]="{user_list: 'user_list_2', singularLabel: this.organizerLabel, pluralLabel: this.organizersLabel}">{{organizerLabel}}</ion-select-option>
+          <ion-select-option [value]="{user_list: 'user_list_3', singularLabel: this.leaderLabel, pluralLabel: this.leadersLabel}">{{leaderLabel}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content *ngIf="resource && resource._id && moment.resource && moment.resource.field">
@@ -30,34 +57,23 @@
   </ion-grid>
   <div>
     <ion-list>
-      <ion-item>
-        <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="renderUniqueParticipantList()" (ionCancel)="renderUniqueParticipantList()" placeholder="Search"></ion-searchbar>
-        <ion-select [(ngModel)]="rolesFilter" #RolesSelect (ionChange)="renderUniqueParticipantList()" placeholder="Role" interface="popover" [interfaceOptions]="{header: 'Role'}" [multiple]="true" style="width: 20%; min-width: 40px" *ngIf="!modalPage">
-          <ion-select-option [value]="{user_list: ['user_list_1'], label: this.participantLabel}">{{participantLabel}}</ion-select-option>
-          <ion-select-option [value]="{user_list: ['user_list_2'], label: this.organizerLabel}">{{organizerLabel}}</ion-select-option>
-          <ion-select-option [value]="{user_list: ['user_list_3'], label: this.leaderLabel}">{{leaderLabel}}</ion-select-option>
-        </ion-select>
-        <ion-button slot="end" (click)="inviteSelect.open($event)" *ngIf="!modalPage">Invite</ion-button>
-        <ion-select #InviteSelect placeholder="Invite" interface="popover" [interfaceOptions]="{header: 'Invite'}" (ionChange)="openPopUpModalAddParticipants($event)" hidden>
-          <ion-select-option [value]="{user_list: ['user_list_1'], label: this.participantLabel}">{{participantLabel}}</ion-select-option>
-          <ion-select-option [value]="{user_list: ['user_list_2'], label: this.organizerLabel}">{{organizerLabel}}</ion-select-option>
-          <ion-select-option [value]="{user_list: ['user_list_3'], label: this.leaderLabel}">{{leaderLabel}}</ion-select-option>
-        </ion-select>
-      </ion-item>
       <ion-item lines="none">
-        <ion-label (click)="sortDisplay('participant')">People<ion-icon [name]="participantAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></ion-label>
-        <ion-label (click)="sortDisplay('role')">Role<ion-icon [name]="roleAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></ion-label>
+        <ion-icon slot="start" style="color: transparent"></ion-icon>
+        <ion-avatar slot="start" style="color: transparent"></ion-avatar>
+        <ion-label class="name-label" (click)="sortDisplay('participant')">People<ion-icon [name]="participantAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></ion-label>
+        <ion-label class="role-label column-label" (click)="sortDisplay('role')">Role<ion-icon [name]="roleAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></ion-label>
+        <div class="chat-label" *ngIf="!modalPage"></div>
       </ion-item>
       <ion-item *ngFor="let user of displayParticipantList; index as j" lines="full" [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}">
-        <ion-icon slot="start" color="tertiary" *ngIf="!user.select" name="radio-button-off" (click)="user.select = true"></ion-icon>
-        <ion-icon slot="start" color="tertiary" *ngIf="user.select" name="checkmark-circle" (click)="user.select = false"></ion-icon>
+        <ion-icon slot="start" color="tertiary" *ngIf="!user.select" name="radio-button-off" (click)="selectParticipant(user)"></ion-icon>
+        <ion-icon slot="start" color="tertiary" *ngIf="user.select" name="checkmark-circle" (click)="unselectParticipant(user)"></ion-icon>
         <ion-avatar slot="start" (click)="seeUserInfo($event, user)">
           <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
           <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
         </ion-avatar>
-        <ion-label (click)="seeUserInfo($event, user)" class="ion-text-wrap">{{user.first_name}} {{user.last_name}}</ion-label>
-        <ion-label class="ion-text-wrap">{{user.roles.join(" / ")}}</ion-label>
-        <ion-button (click)="pushToMessagePage($event, user)" [disabled]="userData.user._id === user._id">Chat</ion-button>
+        <ion-label class="ion-text-wrap name-label" (click)="seeUserInfo($event, user)">{{user.first_name}} {{user.last_name}}</ion-label>
+        <ion-label class="ion-text-wrap role-label column-label">{{user.roles.join(" / ")}}</ion-label>
+        <ion-button class="chat-label" (click)="pushToMessagePage($event, user)" [disabled]="userData.user._id === user._id" *ngIf="!modalPage">Chat</ion-button>
       </ion-item>
     </ion-list>
   </div>
